# QuickImGui

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: application.h  backend.h  imgui_scoped.h  imgui_utils.h  platform.h  quick_imgui.h
src/: backend_dx11_win32.cpp  backend_gl3_glfw.cpp  main.cpp  main.cpp.txt
src/backend/: backend_dx11_win32.cpp
src/glad/: gl.h
